--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: "units-test"
+name: "tests"
 on:
   pull_request:
   push:
@@ -7,8 +7,7 @@ on:
       - 'v**'
 
 jobs:
-  # unit tests
-  units:
+  tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
